--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "*.inc": "cpp",
     "*.css": "css",
     "stdlib.h": "c"
-  }
+  },
+  "livePreview.defaultPreviewPath": "/D/CourseMaterial/index-j.html"
 }
